--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
+
+
 ### STS ###
 .apt_generated
 .classpath
@@ -23,3 +25,4 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+/bin/
